# FALocalRepo

./: README.md  pyproject.toml
falocalrepo/: downloader.py
falocalrepo/console/: app.py  database.py  download.py  util.py
localrepo/: __main__.py
localrepo/console/: app.py  config.py  database.py  download.py  util.py
