[tool.poetry]
name = "localrepo"
version = "4.3.7"
description = "Pure Python program to download any user's gallery, scraps, favorites, and journals from art gallery sites in an easily handled database. A fork of FALocalRepo."
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/solipsis-project/LocalRepo"
repository = "https://github.com/solipsis-project/LocalRepo"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Utilities",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/solipsis-project/LocalRepo/blob/main/CHANGELOG.md"
"Source" = "https://github.com/solipsis-project/LocalRepo"
"Bug Reports" = "https://github.com/solipsis-project/LocalRepo/issues"
"Documentation" = "https://github.com/solipsis-project/LocalRepo/wiki"

[tool.poetry.scripts]
localrepo = "localrepo.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.2"
click = "^8.1.3"
click-help-colors = "^0.9.1"
pretty-errors = "^1.2.25"
wcwidth = "^0.2.5"
supports-color = "^0.1.2"
localrepo-server = {path = "../localrepo-server"}
localrepo-database = {path = "../localrepo-database"}
localrepo-api = {path = "../localrepo-api"}
urllib3 = "<2"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
